# finance

./: .gitignore  CMakeLists.txt  MEGAADDER.sql  README.md
Application/: CMakeLists.txt  main.cpp
Client/: CMakeLists.txt  main.cpp
Networking/: CMakeLists.txt
Networking/include/Networking/: Connection.h  DatabaseManager.h  Server.h
Networking/src/: Connection.cpp  DatabaseManager.cpp  Server.cpp
Server/: CMakeLists.txt  main.cpp
Server/include/Server/: Connection.h  DatabaseManager.h  Server.h
Server/src/: Connection.cpp  DatabaseManager.cpp  Server.cpp
